syntax = "proto3";

option java_package = "com.eblan.launcher.data.datastore.proto.home";
option java_multiple_files = true;

message GridItemSettingsProto {
  int32 iconSize = 1;
  TextColorProto textColorProto = 2;
  int32 textSize = 3;
  bool showLabel = 4;
  bool singleLineLabel = 5;
  HorizontalAlignmentProto horizontalAlignmentProto = 6;
  VerticalArrangementProto verticalArrangementProto = 7;
}

enum TextColorProto {
  TextColorSystem = 0;
  TextColorLight = 1;
  TextColorDark = 2;
}

enum HorizontalAlignmentProto {
  Start = 0;
  CenterHorizontally = 1;
  End = 2;
}

enum VerticalArrangementProto {
  Top = 0;
  Center = 1;
  Bottom = 2;
}