syntax = "proto3";

import "com/eblan/launcher/data/datastore/proto/home/text_color.proto";

option java_package = "com.eblan.launcher.data.datastore.proto.home";
option java_multiple_files = true;

message HomeSettingsProto {
  int32 rows = 1;
  int32 columns = 2;
  int32 pageCount = 3;
  bool infiniteScroll = 4;
  int32 dockRows = 5;
  int32 dockColumns = 6;
  int32 dockHeight = 7;
  TextColorProto textColorProto = 8;
  int32 initialPage = 9;
  bool wallpaperScroll = 10;
  int32 folderRows = 11;
  int32 folderColumns = 12;
}