/*
 *
 *   Copyright 2023 Einstein Blanco
 *
 *   Licensed under the GNU General Public License v3.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *       https://www.gnu.org/licenses/gpl-3.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 *
 */

syntax = "proto3";

import "com/eblan/launcher/data/datastore/proto/text_color.proto";

option java_package = "com.eblan.launcher.data.datastore.proto";
option java_multiple_files = true;

message UserPreferences {
  int32 rows = 1;

  int32 columns = 2;

  int32 pageCount = 3;

  bool infiniteScroll = 4;

  int32 dockRows = 5;

  int32 dockColumns = 6;

  int32 dockHeight = 7;

  TextColor textColor = 8;

  int32 appDrawerColumns = 9;

  int32 appDrawerRowsHeight = 10;

  int32 initialPage = 11;
}
